parser.output
Terminals unused in grammar

   ARRAYED_LIST
   OSB
   CSB
   REQUIRE
   ENSURE
   KEYWORD
   PIPEDOTS


State 59 conflicts: 13 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: class_declaration

    2 class_declaration: CLASS IDENTIFIER inside_class END

    3 inside_class: %empty
    4             | create_declaration features_declaration

    5 create_declaration: CREATE IDENTIFIER

    6 features_declaration: %empty
    7                     | features_declaration feature_declaration

    8 feature_declaration: FEATURE inside_feature

    9 inside_feature: %empty
   10               | IDENTIFIER function_head inside_function inside_feature
   11               | IDENTIFIER function_head if_return inside_function inside_feature

   12 function_head: %empty
   13              | OP container CP

   14 inside_function: %empty
   15                | local DO code_section END

   16 local: %empty
   17      | LOCAL variable_declaration

   18 variable_declaration: %empty
   19                     | IDENTIFIER if_return variable_declaration

   20 container: %empty
   21          | IDENTIFIER if_return delimiter container

   22 delimiter: %empty
   23          | SEMICOLON

   24 if_return: COLON DATATYPE

   25 code_section: code_section_in
   26             | code_section_in code_section

   27 code_section_in: condition
   28                | inspect_structure
   29                | loops
   30                | variable_assignment
   31                | print_function

   32 print_function: PRINT OP inside_print CP

   33 inside_print: possible_inside_print
   34             | possible_inside_print ADD inside_print

   35 possible_inside_print: string_literal
   36                      | IDENTIFIER

   37 condition: if-condition elseif-condition else-condition END

   38 variable_assignments: %empty
   39                     | variable_assignments variable_assignment

   40 variable_assignment: IDENTIFIER ASSIGN expr
   41                    | IDENTIFIER ASSIGN string_literal

   42 statement: bool_exp
   43          | comp_exp

   44 if-condition: IF statement THEN code_section

   45 elseif-condition: %empty
   46                 | elseif-condition ELSEIF statement THEN code_section

   47 else-condition: %empty
   48               | ELSE code_section

   49 inspect_structure: INSPECT expr when_part_list ELSE code_section END

   50 when_part_list: %empty
   51               | when_part_list when_part

   52 when_part: WHEN choices THEN code_section

   53 choices: literals
   54        | literals COMMA choices
   55        | literals DOTS literals

   56 loops: FROM variable_assignment variable_assignments top_loop UNTIL statement LOOP code_section bottom_loop END

   57 top_loop: %empty
   58         | invariant_contracts

   59 bottom_loop: %empty
   60            | variant_contracts

   61 comp_operator: GT
   62              | GTEQ
   63              | LT
   64              | LTEQ
   65              | EQUAL

   66 literals: integer_literal
   67         | real_literal
   68         | string_literal
   69         | double_literal
   70         | character_literal
   71         | boolean_literal

   72 integer_literal: INTEGER

   73 real_literal: REAL

   74 string_literal: STRING

   75 double_literal: DOUBLE

   76 character_literal: CHARACTER

   77 boolean_literal: BOOLEAN

   78 invariant_contracts: INVARIANT contracts_expressions

   79 variant_contracts: VARIANT contracts_expressions

   80 contracts_expressions: IDENTIFIER COLON statement
   81                      | statement

   82 expr: bool_exp
   83     | arithmetic_exp
   84     | comp_exp

   85 bool_exp: bool_exp OR bool_term
   86         | bool_term

   87 bool_term: bool_term AND bool_factor
   88          | bool_factor

   89 bool_factor: bool_factor XOR bool_node
   90            | bool_node

   91 bool_node: IDENTIFIER
   92          | NOT bool_node
   93          | BOOLEAN
   94          | OP bool_exp CP

   95 comp_exp: arithmetic_exp comp_operator arithmetic_exp
   96         | string_literal comp_operator string_literal
   97         | boolean_literal EQUAL boolean_literal

   98 arithmetic_exp: arithmetic_term
   99               | arithmetic_exp ADD arithmetic_term
  100               | arithmetic_exp SUB arithmetic_term

  101 arithmetic_term: arithmetic_factor
  102                | arithmetic_term MUL arithmetic_factor
  103                | arithmetic_term DIV arithmetic_factor

  104 arithmetic_factor: IDENTIFIER
  105                  | integer_literal
  106                  | real_literal
  107                  | double_literal
  108                  | OP arithmetic_exp CP


Terminals, with rules where they appear

$end (0) 0
error (256)
INTEGER (258) 72
REAL (259) 73
STRING (260) 74
ARRAYED_LIST (261)
BOOLEAN (262) 77 93
CHARACTER (263) 76
DOUBLE (264) 75
OP (265) 13 32 94 108
CP (266) 13 32 94 108
OSB (267)
CSB (268)
COLON (269) 24 80
SEMICOLON (270) 23
EQUAL (271) 65 97
ASSIGN (272) 40 41
REQUIRE (273)
ENSURE (274)
INVARIANT (275) 78
VARIANT (276) 79
CLASS (277) 2
CREATE (278) 5
FEATURE (279) 8
KEYWORD (280)
LOCAL (281) 17
IDENTIFIER (282) 2 5 10 11 19 21 36 40 41 80 91 104
DO (283) 15
END (284) 2 15 37 49 56
DATATYPE (285) 24
IF (286) 44
THEN (287) 44 46 52
ELSEIF (288) 46
ELSE (289) 48 49
INSPECT (290) 49
WHEN (291) 52
COMMA (292) 54
GTEQ (293) 62
LT (294) 63
LTEQ (295) 64
GT (296) 61
PIPEDOTS (297)
DOTS (298) 55
FROM (299) 56
UNTIL (300) 56
LOOP (301) 56
ADD (302) 34 99
SUB (303) 100
MUL (304) 102
DIV (305) 103
AND (306) 87
OR (307) 85
XOR (308) 89
NOT (309) 92
PRINT (310) 32


Nonterminals, with rules where they appear

$accept (56)
    on left: 0
program (57)
    on left: 1, on right: 0
class_declaration (58)
    on left: 2, on right: 1
inside_class (59)
    on left: 3 4, on right: 2
create_declaration (60)
    on left: 5, on right: 4
features_declaration (61)
    on left: 6 7, on right: 4 7
feature_declaration (62)
    on left: 8, on right: 7
inside_feature (63)
    on left: 9 10 11, on right: 8 10 11
function_head (64)
    on left: 12 13, on right: 10 11
inside_function (65)
    on left: 14 15, on right: 10 11
local (66)
    on left: 16 17, on right: 15
variable_declaration (67)
    on left: 18 19, on right: 17 19
container (68)
    on left: 20 21, on right: 13 21
delimiter (69)
    on left: 22 23, on right: 21
if_return (70)
    on left: 24, on right: 11 19 21
code_section (71)
    on left: 25 26, on right: 15 26 44 46 48 49 52 56
code_section_in (72)
    on left: 27 28 29 30 31, on right: 25 26
print_function (73)
    on left: 32, on right: 31
inside_print (74)
    on left: 33 34, on right: 32 34
possible_inside_print (75)
    on left: 35 36, on right: 33 34
condition (76)
    on left: 37, on right: 27
variable_assignments (77)
    on left: 38 39, on right: 39 56
variable_assignment (78)
    on left: 40 41, on right: 30 39 56
statement (79)
    on left: 42 43, on right: 44 46 56 80 81
if-condition (80)
    on left: 44, on right: 37
elseif-condition (81)
    on left: 45 46, on right: 37 46
else-condition (82)
    on left: 47 48, on right: 37
inspect_structure (83)
    on left: 49, on right: 28
when_part_list (84)
    on left: 50 51, on right: 49 51
when_part (85)
    on left: 52, on right: 51
choices (86)
    on left: 53 54 55, on right: 52 54
loops (87)
    on left: 56, on right: 29
top_loop (88)
    on left: 57 58, on right: 56
bottom_loop (89)
    on left: 59 60, on right: 56
comp_operator (90)
    on left: 61 62 63 64 65, on right: 95 96
literals (91)
    on left: 66 67 68 69 70 71, on right: 53 54 55
integer_literal (92)
    on left: 72, on right: 66 105
real_literal (93)
    on left: 73, on right: 67 106
string_literal (94)
    on left: 74, on right: 35 41 68 96
double_literal (95)
    on left: 75, on right: 69 107
character_literal (96)
    on left: 76, on right: 70
boolean_literal (97)
    on left: 77, on right: 71 97
invariant_contracts (98)
    on left: 78, on right: 58
variant_contracts (99)
    on left: 79, on right: 60
contracts_expressions (100)
    on left: 80 81, on right: 78 79
expr (101)
    on left: 82 83 84, on right: 40 49
bool_exp (102)
    on left: 85 86, on right: 42 82 85 94
bool_term (103)
    on left: 87 88, on right: 85 86 87
bool_factor (104)
    on left: 89 90, on right: 87 88 89
bool_node (105)
    on left: 91 92 93 94, on right: 89 90 92
comp_exp (106)
    on left: 95 96 97, on right: 43 84
arithmetic_exp (107)
    on left: 98 99 100, on right: 83 95 99 100 108
arithmetic_term (108)
    on left: 101 102 103, on right: 98 99 100 102 103
arithmetic_factor (109)
    on left: 104 105 106 107 108, on right: 101 102 103


State 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program            go to state 2
    class_declaration  go to state 3


State 1

    2 class_declaration: CLASS . IDENTIFIER inside_class END

    IDENTIFIER  shift, and go to state 4


State 2

    0 $accept: program . $end

    $end  shift, and go to state 5


State 3

    1 program: class_declaration .

    $default  reduce using rule 1 (program)


State 4

    2 class_declaration: CLASS IDENTIFIER . inside_class END

    CREATE  shift, and go to state 6

    $default  reduce using rule 3 (inside_class)

    inside_class        go to state 7
    create_declaration  go to state 8


State 5

    0 $accept: program $end .

    $default  accept


State 6

    5 create_declaration: CREATE . IDENTIFIER

    IDENTIFIER  shift, and go to state 9


State 7

    2 class_declaration: CLASS IDENTIFIER inside_class . END

    END  shift, and go to state 10


State 8

    4 inside_class: create_declaration . features_declaration

    $default  reduce using rule 6 (features_declaration)

    features_declaration  go to state 11


State 9

    5 create_declaration: CREATE IDENTIFIER .

    $default  reduce using rule 5 (create_declaration)


State 10

    2 class_declaration: CLASS IDENTIFIER inside_class END .

    $default  reduce using rule 2 (class_declaration)


State 11

    4 inside_class: create_declaration features_declaration .
    7 features_declaration: features_declaration . feature_declaration

    FEATURE  shift, and go to state 12

    $default  reduce using rule 4 (inside_class)

    feature_declaration  go to state 13


State 12

    8 feature_declaration: FEATURE . inside_feature

    IDENTIFIER  shift, and go to state 14

    $default  reduce using rule 9 (inside_feature)

    inside_feature  go to state 15


State 13

    7 features_declaration: features_declaration feature_declaration .

    $default  reduce using rule 7 (features_declaration)


State 14

   10 inside_feature: IDENTIFIER . function_head inside_function inside_feature
   11               | IDENTIFIER . function_head if_return inside_function inside_feature

    OP  shift, and go to state 16

    $default  reduce using rule 12 (function_head)

    function_head  go to state 17


State 15

    8 feature_declaration: FEATURE inside_feature .

    $default  reduce using rule 8 (feature_declaration)


State 16

   13 function_head: OP . container CP

    IDENTIFIER  shift, and go to state 18

    $default  reduce using rule 20 (container)

    container  go to state 19


State 17

   10 inside_feature: IDENTIFIER function_head . inside_function inside_feature
   11               | IDENTIFIER function_head . if_return inside_function inside_feature

    COLON  shift, and go to state 20
    LOCAL  shift, and go to state 21

    DO        reduce using rule 16 (local)
    $default  reduce using rule 14 (inside_function)

    inside_function  go to state 22
    local            go to state 23
    if_return        go to state 24


State 18

   21 container: IDENTIFIER . if_return delimiter container

    COLON  shift, and go to state 20

    if_return  go to state 25


State 19

   13 function_head: OP container . CP

    CP  shift, and go to state 26


State 20

   24 if_return: COLON . DATATYPE

    DATATYPE  shift, and go to state 27


State 21

   17 local: LOCAL . variable_declaration

    IDENTIFIER  shift, and go to state 28

    $default  reduce using rule 18 (variable_declaration)

    variable_declaration  go to state 29


State 22

   10 inside_feature: IDENTIFIER function_head inside_function . inside_feature

    IDENTIFIER  shift, and go to state 14

    $default  reduce using rule 9 (inside_feature)

    inside_feature  go to state 30


State 23

   15 inside_function: local . DO code_section END

    DO  shift, and go to state 31


State 24

   11 inside_feature: IDENTIFIER function_head if_return . inside_function inside_feature

    LOCAL  shift, and go to state 21

    DO        reduce using rule 16 (local)
    $default  reduce using rule 14 (inside_function)

    inside_function  go to state 32
    local            go to state 23


State 25

   21 container: IDENTIFIER if_return . delimiter container

    SEMICOLON  shift, and go to state 33

    $default  reduce using rule 22 (delimiter)

    delimiter  go to state 34


State 26

   13 function_head: OP container CP .

    $default  reduce using rule 13 (function_head)


State 27

   24 if_return: COLON DATATYPE .

    $default  reduce using rule 24 (if_return)


State 28

   19 variable_declaration: IDENTIFIER . if_return variable_declaration

    COLON  shift, and go to state 20

    if_return  go to state 35


State 29

   17 local: LOCAL variable_declaration .

    $default  reduce using rule 17 (local)


State 30

   10 inside_feature: IDENTIFIER function_head inside_function inside_feature .

    $default  reduce using rule 10 (inside_feature)


State 31

   15 inside_function: local DO . code_section END

    IDENTIFIER  shift, and go to state 36
    IF          shift, and go to state 37
    INSPECT     shift, and go to state 38
    FROM        shift, and go to state 39
    PRINT       shift, and go to state 40

    code_section         go to state 41
    code_section_in      go to state 42
    print_function       go to state 43
    condition            go to state 44
    variable_assignment  go to state 45
    if-condition         go to state 46
    inspect_structure    go to state 47
    loops                go to state 48


State 32

   11 inside_feature: IDENTIFIER function_head if_return inside_function . inside_feature

    IDENTIFIER  shift, and go to state 14

    $default  reduce using rule 9 (inside_feature)

    inside_feature  go to state 49


State 33

   23 delimiter: SEMICOLON .

    $default  reduce using rule 23 (delimiter)


State 34

   21 container: IDENTIFIER if_return delimiter . container

    IDENTIFIER  shift, and go to state 18

    $default  reduce using rule 20 (container)

    container  go to state 50


State 35

   19 variable_declaration: IDENTIFIER if_return . variable_declaration

    IDENTIFIER  shift, and go to state 28

    $default  reduce using rule 18 (variable_declaration)

    variable_declaration  go to state 51


State 36

   40 variable_assignment: IDENTIFIER . ASSIGN expr
   41                    | IDENTIFIER . ASSIGN string_literal

    ASSIGN  shift, and go to state 52


State 37

   44 if-condition: IF . statement THEN code_section

    INTEGER     shift, and go to state 53
    REAL        shift, and go to state 54
    STRING      shift, and go to state 55
    BOOLEAN     shift, and go to state 56
    DOUBLE      shift, and go to state 57
    OP          shift, and go to state 58
    IDENTIFIER  shift, and go to state 59
    NOT         shift, and go to state 60

    statement          go to state 61
    integer_literal    go to state 62
    real_literal       go to state 63
    string_literal     go to state 64
    double_literal     go to state 65
    boolean_literal    go to state 66
    bool_exp           go to state 67
    bool_term          go to state 68
    bool_factor        go to state 69
    bool_node          go to state 70
    comp_exp           go to state 71
    arithmetic_exp     go to state 72
    arithmetic_term    go to state 73
    arithmetic_factor  go to state 74


State 38

   49 inspect_structure: INSPECT . expr when_part_list ELSE code_section END

    INTEGER     shift, and go to state 53
    REAL        shift, and go to state 54
    STRING      shift, and go to state 55
    BOOLEAN     shift, and go to state 56
    DOUBLE      shift, and go to state 57
    OP          shift, and go to state 58
    IDENTIFIER  shift, and go to state 59
    NOT         shift, and go to state 60

    integer_literal    go to state 62
    real_literal       go to state 63
    string_literal     go to state 64
    double_literal     go to state 65
    boolean_literal    go to state 66
    expr               go to state 75
    bool_exp           go to state 76
    bool_term          go to state 68
    bool_factor        go to state 69
    bool_node          go to state 70
    comp_exp           go to state 77
    arithmetic_exp     go to state 78
    arithmetic_term    go to state 73
    arithmetic_factor  go to state 74


State 39

   56 loops: FROM . variable_assignment variable_assignments top_loop UNTIL statement LOOP code_section bottom_loop END

    IDENTIFIER  shift, and go to state 36

    variable_assignment  go to state 79


State 40

   32 print_function: PRINT . OP inside_print CP

    OP  shift, and go to state 80


State 41

   15 inside_function: local DO code_section . END

    END  shift, and go to state 81


State 42

   25 code_section: code_section_in .
   26             | code_section_in . code_section

    IDENTIFIER  shift, and go to state 36
    IF          shift, and go to state 37
    INSPECT     shift, and go to state 38
    FROM        shift, and go to state 39
    PRINT       shift, and go to state 40

    $default  reduce using rule 25 (code_section)

    code_section         go to state 82
    code_section_in      go to state 42
    print_function       go to state 43
    condition            go to state 44
    variable_assignment  go to state 45
    if-condition         go to state 46
    inspect_structure    go to state 47
    loops                go to state 48


State 43

   31 code_section_in: print_function .

    $default  reduce using rule 31 (code_section_in)


State 44

   27 code_section_in: condition .

    $default  reduce using rule 27 (code_section_in)


State 45

   30 code_section_in: variable_assignment .

    $default  reduce using rule 30 (code_section_in)


State 46

   37 condition: if-condition . elseif-condition else-condition END

    $default  reduce using rule 45 (elseif-condition)

    elseif-condition  go to state 83


State 47

   28 code_section_in: inspect_structure .

    $default  reduce using rule 28 (code_section_in)


State 48

   29 code_section_in: loops .

    $default  reduce using rule 29 (code_section_in)


State 49

   11 inside_feature: IDENTIFIER function_head if_return inside_function inside_feature .

    $default  reduce using rule 11 (inside_feature)


State 50

   21 container: IDENTIFIER if_return delimiter container .

    $default  reduce using rule 21 (container)


State 51

   19 variable_declaration: IDENTIFIER if_return variable_declaration .

    $default  reduce using rule 19 (variable_declaration)


State 52

   40 variable_assignment: IDENTIFIER ASSIGN . expr
   41                    | IDENTIFIER ASSIGN . string_literal

    INTEGER     shift, and go to state 53
    REAL        shift, and go to state 54
    STRING      shift, and go to state 55
    BOOLEAN     shift, and go to state 56
    DOUBLE      shift, and go to state 57
    OP          shift, and go to state 58
    IDENTIFIER  shift, and go to state 59
    NOT         shift, and go to state 60

    integer_literal    go to state 62
    real_literal       go to state 63
    string_literal     go to state 84
    double_literal     go to state 65
    boolean_literal    go to state 66
    expr               go to state 85
    bool_exp           go to state 76
    bool_term          go to state 68
    bool_factor        go to state 69
    bool_node          go to state 70
    comp_exp           go to state 77
    arithmetic_exp     go to state 78
    arithmetic_term    go to state 73
    arithmetic_factor  go to state 74


State 53

   72 integer_literal: INTEGER .

    $default  reduce using rule 72 (integer_literal)


State 54

   73 real_literal: REAL .

    $default  reduce using rule 73 (real_literal)


State 55

   74 string_literal: STRING .

    $default  reduce using rule 74 (string_literal)


State 56

   77 boolean_literal: BOOLEAN .
   93 bool_node: BOOLEAN .

    EQUAL     reduce using rule 77 (boolean_literal)
    $default  reduce using rule 93 (bool_node)


State 57

   75 double_literal: DOUBLE .

    $default  reduce using rule 75 (double_literal)


State 58

   94 bool_node: OP . bool_exp CP
  108 arithmetic_factor: OP . arithmetic_exp CP

    INTEGER     shift, and go to state 53
    REAL        shift, and go to state 54
    BOOLEAN     shift, and go to state 86
    DOUBLE      shift, and go to state 57
    OP          shift, and go to state 58
    IDENTIFIER  shift, and go to state 59
    NOT         shift, and go to state 60

    integer_literal    go to state 62
    real_literal       go to state 63
    double_literal     go to state 65
    bool_exp           go to state 87
    bool_term          go to state 68
    bool_factor        go to state 69
    bool_node          go to state 70
    arithmetic_exp     go to state 88
    arithmetic_term    go to state 73
    arithmetic_factor  go to state 74


State 59

   91 bool_node: IDENTIFIER .
  104 arithmetic_factor: IDENTIFIER .

    CP          reduce using rule 91 (bool_node)
    CP          [reduce using rule 104 (arithmetic_factor)]
    EQUAL       reduce using rule 104 (arithmetic_factor)
    INVARIANT   reduce using rule 91 (bool_node)
    INVARIANT   [reduce using rule 104 (arithmetic_factor)]
    VARIANT     reduce using rule 91 (bool_node)
    VARIANT     [reduce using rule 104 (arithmetic_factor)]
    IDENTIFIER  reduce using rule 91 (bool_node)
    IDENTIFIER  [reduce using rule 104 (arithmetic_factor)]
    END         reduce using rule 91 (bool_node)
    END         [reduce using rule 104 (arithmetic_factor)]
    IF          reduce using rule 91 (bool_node)
    IF          [reduce using rule 104 (arithmetic_factor)]
    ELSEIF      reduce using rule 91 (bool_node)
    ELSEIF      [reduce using rule 104 (arithmetic_factor)]
    ELSE        reduce using rule 91 (bool_node)
    ELSE        [reduce using rule 104 (arithmetic_factor)]
    INSPECT     reduce using rule 91 (bool_node)
    INSPECT     [reduce using rule 104 (arithmetic_factor)]
    WHEN        reduce using rule 91 (bool_node)
    WHEN        [reduce using rule 104 (arithmetic_factor)]
    GTEQ        reduce using rule 104 (arithmetic_factor)
    LT          reduce using rule 104 (arithmetic_factor)
    LTEQ        reduce using rule 104 (arithmetic_factor)
    GT          reduce using rule 104 (arithmetic_factor)
    FROM        reduce using rule 91 (bool_node)
    FROM        [reduce using rule 104 (arithmetic_factor)]
    UNTIL       reduce using rule 91 (bool_node)
    UNTIL       [reduce using rule 104 (arithmetic_factor)]
    ADD         reduce using rule 104 (arithmetic_factor)
    SUB         reduce using rule 104 (arithmetic_factor)
    MUL         reduce using rule 104 (arithmetic_factor)
    DIV         reduce using rule 104 (arithmetic_factor)
    PRINT       reduce using rule 91 (bool_node)
    PRINT       [reduce using rule 104 (arithmetic_factor)]
    $default    reduce using rule 91 (bool_node)


State 60

   92 bool_node: NOT . bool_node

    BOOLEAN     shift, and go to state 86
    OP          shift, and go to state 89
    IDENTIFIER  shift, and go to state 90
    NOT         shift, and go to state 60

    bool_node  go to state 91


State 61

   44 if-condition: IF statement . THEN code_section

    THEN  shift, and go to state 92


State 62

  105 arithmetic_factor: integer_literal .

    $default  reduce using rule 105 (arithmetic_factor)


State 63

  106 arithmetic_factor: real_literal .

    $default  reduce using rule 106 (arithmetic_factor)


State 64

   96 comp_exp: string_literal . comp_operator string_literal

    EQUAL  shift, and go to state 93
    GTEQ   shift, and go to state 94
    LT     shift, and go to state 95
    LTEQ   shift, and go to state 96
    GT     shift, and go to state 97

    comp_operator  go to state 98


State 65

  107 arithmetic_factor: double_literal .

    $default  reduce using rule 107 (arithmetic_factor)


State 66

   97 comp_exp: boolean_literal . EQUAL boolean_literal

    EQUAL  shift, and go to state 99


State 67

   42 statement: bool_exp .
   85 bool_exp: bool_exp . OR bool_term

    OR  shift, and go to state 100

    $default  reduce using rule 42 (statement)


State 68

   86 bool_exp: bool_term .
   87 bool_term: bool_term . AND bool_factor

    AND  shift, and go to state 101

    $default  reduce using rule 86 (bool_exp)


State 69

   88 bool_term: bool_factor .
   89 bool_factor: bool_factor . XOR bool_node

    XOR  shift, and go to state 102

    $default  reduce using rule 88 (bool_term)


State 70

   90 bool_factor: bool_node .

    $default  reduce using rule 90 (bool_factor)


State 71

   43 statement: comp_exp .

    $default  reduce using rule 43 (statement)


State 72

   95 comp_exp: arithmetic_exp . comp_operator arithmetic_exp
   99 arithmetic_exp: arithmetic_exp . ADD arithmetic_term
  100               | arithmetic_exp . SUB arithmetic_term

    EQUAL  shift, and go to state 93
    GTEQ   shift, and go to state 94
    LT     shift, and go to state 95
    LTEQ   shift, and go to state 96
    GT     shift, and go to state 97
    ADD    shift, and go to state 103
    SUB    shift, and go to state 104

    comp_operator  go to state 105


State 73

   98 arithmetic_exp: arithmetic_term .
  102 arithmetic_term: arithmetic_term . MUL arithmetic_factor
  103                | arithmetic_term . DIV arithmetic_factor

    MUL  shift, and go to state 106
    DIV  shift, and go to state 107

    $default  reduce using rule 98 (arithmetic_exp)


State 74

  101 arithmetic_term: arithmetic_factor .

    $default  reduce using rule 101 (arithmetic_term)


State 75

   49 inspect_structure: INSPECT expr . when_part_list ELSE code_section END

    $default  reduce using rule 50 (when_part_list)

    when_part_list  go to state 108


State 76

   82 expr: bool_exp .
   85 bool_exp: bool_exp . OR bool_term

    OR  shift, and go to state 100

    $default  reduce using rule 82 (expr)


State 77

   84 expr: comp_exp .

    $default  reduce using rule 84 (expr)


State 78

   83 expr: arithmetic_exp .
   95 comp_exp: arithmetic_exp . comp_operator arithmetic_exp
   99 arithmetic_exp: arithmetic_exp . ADD arithmetic_term
  100               | arithmetic_exp . SUB arithmetic_term

    EQUAL  shift, and go to state 93
    GTEQ   shift, and go to state 94
    LT     shift, and go to state 95
    LTEQ   shift, and go to state 96
    GT     shift, and go to state 97
    ADD    shift, and go to state 103
    SUB    shift, and go to state 104

    $default  reduce using rule 83 (expr)

    comp_operator  go to state 105


State 79

   56 loops: FROM variable_assignment . variable_assignments top_loop UNTIL statement LOOP code_section bottom_loop END

    $default  reduce using rule 38 (variable_assignments)

    variable_assignments  go to state 109


State 80

   32 print_function: PRINT OP . inside_print CP

    STRING      shift, and go to state 55
    IDENTIFIER  shift, and go to state 110

    inside_print           go to state 111
    possible_inside_print  go to state 112
    string_literal         go to state 113


State 81

   15 inside_function: local DO code_section END .

    $default  reduce using rule 15 (inside_function)


State 82

   26 code_section: code_section_in code_section .

    $default  reduce using rule 26 (code_section)


State 83

   37 condition: if-condition elseif-condition . else-condition END
   46 elseif-condition: elseif-condition . ELSEIF statement THEN code_section

    ELSEIF  shift, and go to state 114
    ELSE    shift, and go to state 115

    $default  reduce using rule 47 (else-condition)

    else-condition  go to state 116


State 84

   41 variable_assignment: IDENTIFIER ASSIGN string_literal .
   96 comp_exp: string_literal . comp_operator string_literal

    EQUAL  shift, and go to state 93
    GTEQ   shift, and go to state 94
    LT     shift, and go to state 95
    LTEQ   shift, and go to state 96
    GT     shift, and go to state 97

    $default  reduce using rule 41 (variable_assignment)

    comp_operator  go to state 98


State 85

   40 variable_assignment: IDENTIFIER ASSIGN expr .

    $default  reduce using rule 40 (variable_assignment)


State 86

   93 bool_node: BOOLEAN .

    $default  reduce using rule 93 (bool_node)


State 87

   85 bool_exp: bool_exp . OR bool_term
   94 bool_node: OP bool_exp . CP

    CP  shift, and go to state 117
    OR  shift, and go to state 100


State 88

   99 arithmetic_exp: arithmetic_exp . ADD arithmetic_term
  100               | arithmetic_exp . SUB arithmetic_term
  108 arithmetic_factor: OP arithmetic_exp . CP

    CP   shift, and go to state 118
    ADD  shift, and go to state 103
    SUB  shift, and go to state 104


State 89

   94 bool_node: OP . bool_exp CP

    BOOLEAN     shift, and go to state 86
    OP          shift, and go to state 89
    IDENTIFIER  shift, and go to state 90
    NOT         shift, and go to state 60

    bool_exp     go to state 87
    bool_term    go to state 68
    bool_factor  go to state 69
    bool_node    go to state 70


State 90

   91 bool_node: IDENTIFIER .

    $default  reduce using rule 91 (bool_node)


State 91

   92 bool_node: NOT bool_node .

    $default  reduce using rule 92 (bool_node)


State 92

   44 if-condition: IF statement THEN . code_section

    IDENTIFIER  shift, and go to state 36
    IF          shift, and go to state 37
    INSPECT     shift, and go to state 38
    FROM        shift, and go to state 39
    PRINT       shift, and go to state 40

    code_section         go to state 119
    code_section_in      go to state 42
    print_function       go to state 43
    condition            go to state 44
    variable_assignment  go to state 45
    if-condition         go to state 46
    inspect_structure    go to state 47
    loops                go to state 48


State 93

   65 comp_operator: EQUAL .

    $default  reduce using rule 65 (comp_operator)


State 94

   62 comp_operator: GTEQ .

    $default  reduce using rule 62 (comp_operator)


State 95

   63 comp_operator: LT .

    $default  reduce using rule 63 (comp_operator)


State 96

   64 comp_operator: LTEQ .

    $default  reduce using rule 64 (comp_operator)


State 97

   61 comp_operator: GT .

    $default  reduce using rule 61 (comp_operator)


State 98

   96 comp_exp: string_literal comp_operator . string_literal

    STRING  shift, and go to state 55

    string_literal  go to state 120


State 99

   97 comp_exp: boolean_literal EQUAL . boolean_literal

    BOOLEAN  shift, and go to state 121

    boolean_literal  go to state 122


State 100

   85 bool_exp: bool_exp OR . bool_term

    BOOLEAN     shift, and go to state 86
    OP          shift, and go to state 89
    IDENTIFIER  shift, and go to state 90
    NOT         shift, and go to state 60

    bool_term    go to state 123
    bool_factor  go to state 69
    bool_node    go to state 70


State 101

   87 bool_term: bool_term AND . bool_factor

    BOOLEAN     shift, and go to state 86
    OP          shift, and go to state 89
    IDENTIFIER  shift, and go to state 90
    NOT         shift, and go to state 60

    bool_factor  go to state 124
    bool_node    go to state 70


State 102

   89 bool_factor: bool_factor XOR . bool_node

    BOOLEAN     shift, and go to state 86
    OP          shift, and go to state 89
    IDENTIFIER  shift, and go to state 90
    NOT         shift, and go to state 60

    bool_node  go to state 125


State 103

   99 arithmetic_exp: arithmetic_exp ADD . arithmetic_term

    INTEGER     shift, and go to state 53
    REAL        shift, and go to state 54
    DOUBLE      shift, and go to state 57
    OP          shift, and go to state 126
    IDENTIFIER  shift, and go to state 127

    integer_literal    go to state 62
    real_literal       go to state 63
    double_literal     go to state 65
    arithmetic_term    go to state 128
    arithmetic_factor  go to state 74


State 104

  100 arithmetic_exp: arithmetic_exp SUB . arithmetic_term

    INTEGER     shift, and go to state 53
    REAL        shift, and go to state 54
    DOUBLE      shift, and go to state 57
    OP          shift, and go to state 126
    IDENTIFIER  shift, and go to state 127

    integer_literal    go to state 62
    real_literal       go to state 63
    double_literal     go to state 65
    arithmetic_term    go to state 129
    arithmetic_factor  go to state 74


State 105

   95 comp_exp: arithmetic_exp comp_operator . arithmetic_exp

    INTEGER     shift, and go to state 53
    REAL        shift, and go to state 54
    DOUBLE      shift, and go to state 57
    OP          shift, and go to state 126
    IDENTIFIER  shift, and go to state 127

    integer_literal    go to state 62
    real_literal       go to state 63
    double_literal     go to state 65
    arithmetic_exp     go to state 130
    arithmetic_term    go to state 73
    arithmetic_factor  go to state 74


State 106

  102 arithmetic_term: arithmetic_term MUL . arithmetic_factor

    INTEGER     shift, and go to state 53
    REAL        shift, and go to state 54
    DOUBLE      shift, and go to state 57
    OP          shift, and go to state 126
    IDENTIFIER  shift, and go to state 127

    integer_literal    go to state 62
    real_literal       go to state 63
    double_literal     go to state 65
    arithmetic_factor  go to state 131


State 107

  103 arithmetic_term: arithmetic_term DIV . arithmetic_factor

    INTEGER     shift, and go to state 53
    REAL        shift, and go to state 54
    DOUBLE      shift, and go to state 57
    OP          shift, and go to state 126
    IDENTIFIER  shift, and go to state 127

    integer_literal    go to state 62
    real_literal       go to state 63
    double_literal     go to state 65
    arithmetic_factor  go to state 132


State 108

   49 inspect_structure: INSPECT expr when_part_list . ELSE code_section END
   51 when_part_list: when_part_list . when_part

    ELSE  shift, and go to state 133
    WHEN  shift, and go to state 134

    when_part  go to state 135


State 109

   39 variable_assignments: variable_assignments . variable_assignment
   56 loops: FROM variable_assignment variable_assignments . top_loop UNTIL statement LOOP code_section bottom_loop END

    INVARIANT   shift, and go to state 136
    IDENTIFIER  shift, and go to state 36

    $default  reduce using rule 57 (top_loop)

    variable_assignment  go to state 137
    top_loop             go to state 138
    invariant_contracts  go to state 139


State 110

   36 possible_inside_print: IDENTIFIER .

    $default  reduce using rule 36 (possible_inside_print)


State 111

   32 print_function: PRINT OP inside_print . CP

    CP  shift, and go to state 140


State 112

   33 inside_print: possible_inside_print .
   34             | possible_inside_print . ADD inside_print

    ADD  shift, and go to state 141

    $default  reduce using rule 33 (inside_print)


State 113

   35 possible_inside_print: string_literal .

    $default  reduce using rule 35 (possible_inside_print)


State 114

   46 elseif-condition: elseif-condition ELSEIF . statement THEN code_section

    INTEGER     shift, and go to state 53
    REAL        shift, and go to state 54
    STRING      shift, and go to state 55
    BOOLEAN     shift, and go to state 56
    DOUBLE      shift, and go to state 57
    OP          shift, and go to state 58
    IDENTIFIER  shift, and go to state 59
    NOT         shift, and go to state 60
